--- a/src/components/Slideshow/Slideshow.css
+++ b/src/components/Slideshow/Slideshow.css
@@ -1,5 +1,7 @@
 .slideshow{
     width:100%;
     position: relative;
-    height: 600px;
+    height: 500px;
+    margin-left: 0;
+    margin-right: 0;
 }
