--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   height: 40vmin;
 }
 
+body {
+  background-color: #282c34;
+  color: white;
+  /* padding: 40px; */
+  font-family: Arial;
+  text-align: center;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
