--- a/src/components/Slideshow/Slideshow.css
+++ b/src/components/Slideshow/Slideshow.css
@@ -1,9 +1,22 @@
-
-.slideshow{
-    width:100%;
+.diva {
+    width: 100px;
+    height: 100px;
+    /* background: white; */
     position: relative;
-    height: 500px;
-    margin-left: 0;
-    margin-right: 0;
+    animation: mymove 5s infinite;
 
+  }
+  
+  @keyframes mymove {
+    from {left: 0px;}
+    to {left: 200px;}
+  }
+
+.font{
+    font-size: 65px;
+    font-style: oblique;
+    font-family: cursive;
+    color: whitesmoke;
+
+    /* #rgb(198, 200, 62) */
 }
