--- a/src/components/Marketplace/marketplace.css
+++ b/src/components/Marketplace/marketplace.css
@@ -1,7 +1,3 @@
-.b {
-    background: linear-gradient(to bottom, #348f50 0%, #56b4d3 100%);
-}
-
-body{
-    background: black;
+body {
+    background: linear-gradient(to bottom, #ffffff  0%, #ffffff 100%);
 }
